plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.2'
	id 'io.spring.dependency-management' version '1.1.2'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.mastfrog.builder:builder-builder-parent:1.0.9'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'mysql:mysql-connector-java:8.0.28'
	implementation 'io.jsonwebtoken:jjwt:0.9.1' //JWT
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	testImplementation 'com.h2database:h2:1.4.200'
	implementation 'org.jsoup:jsoup:1.14.3'			// jsoup 추가
	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.11.0' // selenium 추가
	implementation 'io.github.bonigarcia:webdrivermanager:5.5.2' // 현재 최신 버전인 4.4.3으로 설정하였으나, 실제 사용 시점에서 최신 버전으로 업데이트 해주세요
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.11.238'
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1' // chatbot
	compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1' // Servlet API (chatbot)
}



tasks.named('test') {
	useJUnitPlatform()
}
